--- a/miniprogram-music/pages/video/video.wxss
+++ b/miniprogram-music/pages/video/video.wxss
@@ -1,1 +1,54 @@
 /* pages/video/video.wxss */
+.container .title {
+  display: flex;
+  height: 100rpx;
+  line-height: 100rpx;
+  padding: 10rpx;
+}
+.container .title_left {
+  width: 80rpx;
+  height: 80rpx;
+}
+.container .title_left image {
+  width: 100%;
+  height: 100%;
+}
+.container .title_icon {
+  width: 80rpx;
+  height: 80rpx;
+  line-height: 80rpx;
+  border-radius: 40rpx;
+  text-align: center;
+  background-color: #f60d10;
+}
+.container .video_icon {
+  font-size:40rpx;
+  color:#fff;
+}
+.container .title_text {
+  width: 520rpx;
+  margin: 0 20rpx;
+  box-shadow: 0px 1px 3px #f1f3f4;
+  height: 80rpx;
+  line-height: 80rpx;
+  text-align: center;
+  color:#666a6d;
+}
+.container .tab {
+  padding: 0 10rpx;
+}
+.container .tab-container {
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+}
+.container .tab-container .default {
+  /* margin-right: 25rpx; */
+  padding: 5rpx 15rpx;
+  min-width: 140rpx;
+  text-align: center;
+}
+.container .active {
+  color: #f60d10;
+  border-bottom: 2px solid #f60d10;
+}
