添加手机号登录模块

--- a/miniprogram-music/pages/video/video.wxml
+++ b/miniprogram-music/pages/video/video.wxml
@@ -17,6 +17,9 @@
         </view>
       </view>
     </scroll-view>
+    <view class="video-content">
+
+    </view>
   </view>
   <!-- 导航栏标签列表区域结束 -->
 
